[gd_scene load_steps=14 format=3 uid="uid://b4br1nw66cn7i"]

[ext_resource type="Script" path="res://scripts/behaviors/enemies/enemy_base.gd" id="1_a86hx"]
[ext_resource type="PackedScene" uid="uid://bcdg5dqevplb4" path="res://misc/system/skull.tscn" id="2_x22ak"]
[ext_resource type="Texture2D" uid="uid://wavry4e63xul" path="res://assets/TinySword/Resources/Sheep/HappySheep_Bouncing.png" id="3_q7pnf"]
[ext_resource type="PackedScene" uid="uid://d3qjptfritetw" path="res://behaviors/follow_player.tscn" id="6_1c2kb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8jeil"]
atlas = ExtResource("3_q7pnf")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sebgs"]
atlas = ExtResource("3_q7pnf")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bt83m"]
atlas = ExtResource("3_q7pnf")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hxf8"]
atlas = ExtResource("3_q7pnf")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hddot"]
atlas = ExtResource("3_q7pnf")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4e25b"]
atlas = ExtResource("3_q7pnf")
region = Rect2(640, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_75gcs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jeil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sebgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bt83m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hxf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hddot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4e25b")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tmps0"]
radius = 8.0
height = 42.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_17lec"]
radius = 32.0
height = 64.0

[node name="Sheep" type="CharacterBody2D" groups=["enemies"]]
motion_mode = 1
script = ExtResource("1_a86hx")
speed = 2
deal_damage_time_cooldown = 3.0
hit_damage = 5
death_prefab = ExtResource("2_x22ak")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -17)
sprite_frames = SubResource("SpriteFrames_75gcs")
animation = &"walk"
autoplay = "walk"
frame_progress = 0.542329

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -9)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_tmps0")
debug_color = Color(0.989457, 0, 0.290225, 0.42)

[node name="AttackArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
visible = false
position = Vector2(0, -16)
shape = SubResource("CapsuleShape2D_17lec")
debug_color = Color(0.721569, 0.478431, 0, 0.203922)

[node name="DamageDigitMarker" type="Marker2D" parent="."]
position = Vector2(0, -37)

[node name="FollowPlayer" parent="." instance=ExtResource("6_1c2kb")]
